Book service and Catogry service updated